syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "agro.proto";

package models;

service AgroStorage {
	rpc Block (BlockRequest) returns (BlockResponse);
	rpc PutBlock (PutBlockRequest) returns (PutResponse);
	rpc RebalanceCheck (RebalanceCheckRequest) returns (RebalanceCheckResponse);
  rpc ReadAheadBlock (PutBlockRequest) returns (EmptyResponse); 
}

message Block {
	bool ok = 1;
	bytes data = 2;
}

message BlockRequest {
	repeated BlockRef block_refs = 1;
  string peer = 2;
  repeated BlockRef readahead = 3;
}

message BlockResponse {
	repeated Block blocks = 1;
}

message PutBlockRequest {
	repeated BlockRef refs = 1;
	repeated bytes blocks = 2;
}

message PutResponse {
	bool ok = 1;
	string err = 2;
}

message RebalanceCheckRequest {
  repeated BlockRef block_refs = 1;
}

message RebalanceCheckResponse {
  repeated bool valid = 1;
  int32 status = 2;
}

message EmptyResponse {}